syntax = "proto3";

import "message.proto";

message ChatSessionInfo {
    string id=1;
    string name=2;
    Message last_message=3;
    optional bytes avatar=4;
    string userId=5;
}